<resources>
    <string name="app_name">Vocabulary</string>
    <string name="action_upload">Upload</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>

    <!-- Strings used for fragments for navigation -->
    <!--    <string name="first_fragment_label">First Fragment</string>-->
    <!--    <string name="second_fragment_label">Second Fragment</string>-->
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="previous">Previous</string>
    <string name="exam_settings">Exam</string>
    <string name="database_settings">Database</string>
    <string name="word_settings">Word</string>
    <string name="ir_verb_settings">Irregular Verb</string>
    <string name="idiom_settings">Idiom</string>
    <string name="save_settings">Save</string>
    <string name="upload_settings">Upload</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>