<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gkreduction.myapplication.com.gkreduction.vocabulary.MainActivity">

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="1"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_upload"
        android:icon="@drawable/ic_upload"
        android:orderInCategory="2"
        android:title="@string/action_upload"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="3"
        android:title="@string/action_save"
        app:showAsAction="collapseActionView" />

</menu>