<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.gkreduction.vocabulary.presentation.ui.main.fragment.FirstFragment">


    <View
        android:id="@+id/space_one"
        android:layout_width="0dp"
        android:layout_height="@dimen/_15gkdp"
        android:layout_marginTop="@dimen/_1gkdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/space_one" />

    <TextView
        android:id="@+id/text_exam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10gkdp"
        android:text="@string/exam_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/_11gkdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space_one" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10gkdp"
        android:buttonTint="@color/black"
        android:text="@string/word_settings"
        android:textColor="@color/black"

        app:layout_constraintStart_toStartOf="@id/text_exam"
        app:layout_constraintTop_toBottomOf="@id/text_exam" />


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_ir_verb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10gkdp"
        android:buttonTint="@color/black"
        android:text="@string/ir_verb_settings"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/text_exam"
        app:layout_constraintTop_toBottomOf="@id/checkbox_word" />


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_idiom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10gkdp"
        android:buttonTint="@color/black"
        android:text="@string/idiom_settings"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/text_exam"
        app:layout_constraintTop_toBottomOf="@id/checkbox_ir_verb" />


    <TextView
        android:id="@+id/text_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10gkdp"
        android:layout_marginTop="@dimen/_20gkdp"
        android:text="@string/database_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/_11gkdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_idiom" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_upload"
        android:layout_width="@dimen/_80gkdp"
        android:layout_height="@dimen/_20gkdp"
        android:layout_marginStart="@dimen/_40gkdp"
        android:layout_marginTop="@dimen/_10gkdp"
        android:layout_marginEnd="@dimen/_10gkdp"
        android:adjustViewBounds="true"
        android:background="@drawable/background_rounded_item"
        android:scaleType="center"
        android:src="@drawable/ic_upload"
        app:layout_constraintStart_toEndOf="@id/text_upload"
        app:layout_constraintTop_toBottomOf="@id/text_database" />


    <TextView
        android:id="@+id/text_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10gkdp"
        android:text="@string/upload_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/_9gkdp"
        app:layout_constraintBottom_toBottomOf="@id/button_upload"
        app:layout_constraintStart_toStartOf="@id/text_database"
        app:layout_constraintTop_toTopOf="@id/button_upload" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_save"
        android:layout_width="@dimen/_80gkdp"
        android:layout_height="@dimen/_20gkdp"
        android:layout_marginTop="@dimen/_10gkdp"
        android:adjustViewBounds="true"
        android:background="@drawable/background_rounded_item"
        android:scaleType="center"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="@id/button_upload"
        app:layout_constraintStart_toStartOf="@id/button_upload"
        app:layout_constraintTop_toBottomOf="@id/button_upload" />


    <TextView
        android:id="@+id/text_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/_9gkdp"
        app:layout_constraintBottom_toBottomOf="@id/button_save"
        app:layout_constraintEnd_toEndOf="@id/text_upload"
        app:layout_constraintStart_toStartOf="@id/text_upload"
        app:layout_constraintTop_toTopOf="@id/button_save" />


    <View
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40gkdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_save" />


</androidx.constraintlayout.widget.ConstraintLayout>